#28456: autoupdate is now free from deprecated usages. Platform can now exclude IDE-related modules completely.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -49,13 +49,8 @@ config.fixedmodules.platform=core, \
         core/output, \
         core/ui, \
         core/windows
-# XXX remove */deprecated when autoupdate no longer requires them
 config.modules.platform=autoupdate, \
-        openide/deprecated, \
-        core/deprecated, \
-        core/execution, \
-        core/compiler, \
-        java/srcmodel, \
+        core/settings, \
         core/javahelp
 
 config.fixedmodules.superslim=core, \
