Forgot to clean bootstrap/src/**/*.class.

--- a/o.n.core/build.xml
+++ b/o.n.core/build.xml
@@ -165,6 +165,9 @@ included with the NetBeans core:</text>
       <fileset dir="src">
         <include name="**/*.class"/>
       </fileset>
+      <fileset dir="bootstrap/src">
+        <include name="**/*.class"/>
+      </fileset>
       <fileset dir=".">
         <include name="*-subst.mf"/>
       </fileset>
