--- a/utilities/src/org/netbeans/modules/search/Bundle.properties
+++ b/utilities/src/org/netbeans/modules/search/Bundle.properties
@@ -47,7 +47,7 @@ ACSD_Tabs=N/A
 ACS_SearchPanel=Panel which shows all enabled search types for user allowing to select appropriate criteria for new search.
 
 #CriteriaView texts
-TEXT_TITLE_CUSTOMIZE=Search Filesystems
+TEXT_TITLE_CUSTOMIZE=Find in Files
 TEXT_LABEL_PREDEFINED=Predefined
 TEXT_BUTTON_SAVE_AS=Save Settings as...
 ACS_TEXT_BUTTON_SAVE_AS=N/A
@@ -91,7 +91,7 @@ TEXT_NO_FILESYSTEM=unknown
 HINT_SHOW_EXPLORER=Show node in Explorer
 
 #names of actions
-TEXT_ACTION_REPOSITORY_SEARCH=&Search Filesystems...
+TEXT_ACTION_REPOSITORY_SEARCH=F&ind in Files...
 
 #Output window tab title
 TITLE_SEARCH_RESULTS=Search Results
