--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -33,27 +33,18 @@ Microsystems, Inc. All Rights Reserved.
     <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath>
         <pathelement location="${nbroot}/openide/openide-13javac-workaround.jar"/>
-        <fileset dir="${nbroot}/openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/java/netbeans/modules">
-          <include name="java.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/java/srcmodel/netbeans/modules/autoload">
-          <include name="java-src-model.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/ant/netbeans/modules">
-          <include name="ant.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/utilities/group/netbeans/modules"> <!-- XXX: depends on Group -->
-          <include name="group.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/jemmy">
-          <include name="jemmy.jar" />
-        </fileset>
-        <fileset dir="${nbroot}/jellytools">
-          <include name="jelly2-nb.jar" />
-        </fileset>
+        <pathelement location="${nbroot}/openide/netbeans/lib/openide.jar"/>
+        <pathelement location="${nbroot}/openide/compiler/netbeans/modules/autoload/openide-compiler.jar" />
+        <pathelement location="${nbroot}/openide/execution/netbeans/modules/autoload/openide-execution.jar" />
+        <pathelement location="${nbroot}/openide/io/netbeans/modules/autoload/openide-io.jar" />
+        <pathelement location="${nbroot}/core/netbeans/lib/core.jar" />
+        <pathelement location="${nbroot}/java/netbeans/modules/java.jar" />
+        <pathelement location="${nbroot}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar" />
+        <pathelement location="${nbroot}/ant/netbeans/modules/ant.jar" />
+        <pathelement location="${nbroot}/utilities/netbeans/modules/group.jar" />
+        <pathelement location="${nbroot}/jemmy/jemmy.jar" />
+        <pathelement location="${nbroot}/jellytools/jelly2-nb.jar" />
+        <pathelement location="${nbroot}/jemmysupport/netbeans/modules/jemmysupport.jar" />
         <!-- Hopefully set up by nbbuild/build.xml: -->
         <pathelement location="${jdkhome}/lib/tools.jar"/>
       </classpath>
@@ -62,25 +53,35 @@ Microsystems, Inc. All Rights Reserved.
 
 
  <target name="prepare-lib" depends="prepare-docs">
-    <ant dir="../xtest/" target="makedist"/>
+    <ant dir="${nbroot}/xtest/" target="makedist"/>
     <mkdir dir="netbeans/xtest-distribution"/>
-    <unzip src="../xtest/xtest-distribution.zip" dest="netbeans/xtest-distribution" />
+    <unzip src="${nbroot}/xtest/xtest-distribution.zip" dest="netbeans/xtest-distribution" />
 
-    <ant dir="../jellytools/"/>
+    <ant dir="${nbroot}/jellytools/"/>
     <mkdir dir="netbeans/modules/ext"/>
-    <copy file="../jellytools/jelly2-nb.jar" tofile="netbeans/modules/ext/jelly2-nb.jar" filtering="off"/>
+    <copy file="${nbroot}/jellytools/jelly2-nb.jar" tofile="netbeans/modules/ext/jelly2-nb.jar" filtering="off"/>
  </target>
-
-  <target name="prepare-docs">
+  
+  <target name="javadoc" unless="jelly.javadoc.uptodate">
     <mkdir dir="netbeans/docs"/>
-    <ant dir="../jellytools/" target="javadoc"/>
-    <copy file="../jellytools/jelly2-nb-javadoc.zip" tofile="netbeans/docs/jelly2-nb-javadoc.zip" filtering="off"/>
+    <ant dir="${nbroot}/jellytools/" target="javadoc"/>
+    <copy file="${nbroot}/jellytools/jelly2-nb-javadoc.zip" tofile="netbeans/docs/jelly2-nb-javadoc.zip" filtering="off"/>
   </target>
 
-  <target name="jars" depends="compile">
-    <!-- tstamp>
+  <target name="prepare-docs">
+      <uptodate property="jelly.javadoc.uptodate" targetfile="netbeans/docs/jelly2-nb-javadoc.zip" >
+  	      <srcfiles dir= "${nbroot}/jellytools/src" includes="**/*.java"/>
+      </uptodate>
+      <antcall target="javadoc"/>
+  </target>
+
+  <target name="timestamp" unless="buildnumber">
+    <tstamp>
         <format property="buildnumber" pattern="yyyyMMddhhmm"/>
-    </tstamp -->
+    </tstamp>
+  </target>
+
+  <target name="jars" depends="compile,timestamp">
     <filter token="BUILD_NUMBER_SUBST" value="${buildnumber}"/>
     <copy file="manifest.mf" tofile="manifest-subst.mf" filtering="on"/>
     <locjar jarfile="netbeans/modules/testtools.jar"
@@ -99,15 +100,14 @@ Microsystems, Inc. All Rights Reserved.
     <makenbm file="testtools.nbm"
              topdir="."
              module="netbeans/modules/testtools.jar"
-	     homepage="http://testtools.${homepage.base}"
-	     distribution="http://${dist.base}/testtools.nbm">
+             homepage="http://testtools.${homepage.base}"
+	         distribution="http://${dist.base}/testtools.nbm">
       <license name="testtools-license.txt">
         <text>For the Test Tools Module itself:</text>
         <file location="${module.license.file}"/>
         <text>For the XTest binary distribution:</text>
         <file location="${xtest.license.file}"/>
       </license>
-
 <!--      <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/> -->
     </makenbm>
   </target>
@@ -130,29 +130,25 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="Info"/>
   </target>
 
-
-  <target name="prepare-modules">
-    <ant dir="../junit/" target="nbm"/>
-    <copy file="../junit/junit.nbm" tofile="junit.nbm" filtering="off"/>
-    <ant dir="../jemmysupport/" target="nbm"/>
-    <copy file="../jemmysupport/jemmysupport.nbm" tofile="jemmysupport.nbm" filtering="off"/>
-
+  <!-- Create zip archive from all nbm files. -->
+  <target name="zip">
+     <ant dir="${nbroot}/junit/" target="nbm"/>
+     <ant dir="${nbroot}/jemmysupport/" target="nbm"/>
+	 <antcall target="nbm"/>
+     <copy file="${nbroot}/junit/junit.nbm" tofile="junit.nbm" filtering="off"/>
+     <copy file="${nbroot}/jemmysupport/jemmysupport.nbm" tofile="jemmysupport.nbm" filtering="off"/>
+     <zip zipfile="testtools-bundle.zip"
+          basedir="."
+          includes="*.nbm"
+          excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"
+          compress="true"/>
   </target>
 
-    <!-- Create zip archive from all nbm files. -->
-    <target name="zip" depends="nbm,prepare-modules">
-        <zip zipfile="testtools-bundle.zip"
-             basedir="."
-             includes="*.nbm"
-             excludesfile="${nbroot}/nbbuild/standard-jar-excludes.txt"
-             compress="true"/>
-    </target>
-
   <target name="realclean" depends="clean">
-    <ant dir="../jemmysupport" antfile="build.xml" target="realclean"/>
-    <ant dir="../jellytools" antfile="build.xml" target="clean"/>
-    <ant dir="../xtest" antfile="build.xml" target="clean"/>
-    <ant dir="../junit" antfile="build.xml" target="clean"/>
+    <ant dir="${nbroot}/jemmysupport" antfile="build.xml" target="realclean"/>
+    <ant dir="${nbroot}/jellytools" antfile="build.xml" target="clean"/>
+    <ant dir="${nbroot}/xtest" antfile="build.xml" target="clean"/>
+    <ant dir="${nbroot}/junit" antfile="build.xml" target="clean"/>
   </target>
 
 
