Making the clean target of the schema2beans generated classes a bit more foolproof, so clean target does not fail.

--- a/tomcat5/build.xml
+++ b/tomcat5/build.xml
@@ -116,7 +116,11 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="Info"/>
   </target>
 
-  <target name="clean-ddgen-src">
+  <target name="clean-ddgen-check">
+    <available property="have-config" file="${tomcat5_dir}/config"/>
+  </target>
+
+  <target name="clean-ddgen-src" if="have-config" depends="clean-ddgen-check">
         <delete>
             <fileset dir="${tomcat5_dir}/config">
                 <include name="*.java"/>
