--- a/tomcat5/build.xml
+++ b/tomcat5/build.xml
@@ -37,25 +37,26 @@ Microsystems, Inc. All Rights Reserved.
           <srcfiles dir="${tomcat5_dir}/resources"
                     includes="tomcat5_config.*"/>
         </uptodate>
-   </target>
+  </target>
 
-   <target name="dd2beans_gen" depends="dd2beans_init" unless="dd.generation.uptodate">
-     <antcall target="clean-ddgen-src"/>
-     <echo message="generating bean graph for Tomcat 5 configuration file" />
-     <java classname="org.netbeans.modules.schema2beans.GenBeans" fork="yes">	
+  <target name="dd2beans_gen" depends="dd2beans_init" unless="dd.generation.uptodate">
+      <antcall target="clean-ddgen-src"/>
+      <echo message="generating bean graph for Tomcat 5 configuration file" />
+      <java classname="org.netbeans.modules.schema2beans.GenBeans" fork="yes">	
      	<classpath>
           <pathelement path="${nb_root}/core/external/xml-apis-1.0b2.jar" />
-	  <pathelement path="${nb_root}/logger/netbeans/lib/ext/logger.jar" />
-	  <pathelement path="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
-	  <fileset dir = "${nb_root}/openide">
-		<include name="netbeans/lib/openide*.jar"/>
-	  </fileset>
-	</classpath>
-	<arg line= "-f ${tomcat5_dir}/resources/tomcat5_config.dtd" />
-	<!--<arg line= "-mdd ${tomcat5_dir}/resources/tomcat5_config.mdd" />-->
-	<arg line= "-p org.netbeans.modules.tomcat.tomcat5.config" />
-	<arg line= "-r src" />
-     </java>
+          <pathelement path="${nb_root}/core/external/crimson-1.1.3.jar" />
+          <pathelement path="${nb_root}/logger/netbeans/lib/ext/logger.jar" />
+          <pathelement path="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar" />
+          <fileset dir = "${nb_root}/openide">
+            <include name="netbeans/lib/openide*.jar"/>
+          </fileset>
+        </classpath>
+        <arg line= "-f ${tomcat5_dir}/resources/tomcat5_config.dtd" />
+        <!--<arg line= "-mdd ${tomcat5_dir}/resources/tomcat5_config.mdd" />-->
+        <arg line= "-p org.netbeans.modules.tomcat.tomcat5.config" />
+        <arg line= "-r src" />
+      </java>
   </target>
   
   <target name="compile" depends="dd2beans_gen">
