--- a/tomcat5/build.xml
+++ b/tomcat5/build.xml
@@ -64,9 +64,10 @@ Microsystems, Inc. All Rights Reserved.
       <classpath>
         <pathelement location="${nb_root}/openide/openide-13javac-workaround.jar"/>
         <pathelement location="${nb_root}/openide/execution/netbeans/modules/autoload/openide-execution.jar"/>
-		<pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
-		<pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
-		<pathelement location="${j2eeserver_jars}/j2eetools.jar"/>
+        <pathelement path="${nb_root}/core/external/xml-apis-1.0b2.jar" />
+        <pathelement location="${nb_root}/schema2beans/netbeans/modules/schema2beans.jar"/>
+        <pathelement location="${nb_root}/web/core/netbeans/modules/jsp.jar"/>
+        <pathelement location="${j2eeserver_jars}/j2eetools.jar"/>
         <pathelement location="${j2eeserver_jars}/ext/jsr88javax.jar"/>
         <fileset dir="${nb_root}/openide/netbeans/lib">
           <include name="openide*.jar" />
