#27151: ability to use ${netbeans.dirs} to include additional installation directories besides only ${netbeans.home}.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -186,6 +186,8 @@ CTL_Netbeanshome_notexists=netbeans.home points to a non-existent directory.
 CTL_Netbeanshome1=netbeans.home does not point to a directory.
 CTL_Netbeanshome2=netbeans.user points to a non-existent directory.
 CTL_Netbeanshome3=netbeans.user does not point to a directory.
+# {0} - path name
+CTL_no_nbdirs=The path {0} in netbeans.dirs does not point to an existing directory.
 # {0} - path to dir that could not be created.
 CTL_CannotCreate_text=Cannot create system directory in {0}. A file with the same name already exists.
 # {0} - path to dir that could not be created.
