added empty Java Help

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -23,6 +23,7 @@ Templates/Services/CompilerType/org-netbeans-modules-testtools-XTestCompiler.set
 Templates/Services/Executor/org-netbeans-modules-testtools-XTestExecutor.settings=XTest Execution
 Mount/Javadoc/org-netbeans-modules-testtools-jelly2-nb-javadoc.xml=Jelly2 API
 Mount/java/org-netbeans-modules-testtools-jelly2-library.xml=Jelly2 Library
+Menu/Help/HelpShortcuts/org-netbeans-modules-testtools-mainpage.xml=TestTools Module Help
 
 # Module properties:
 OpenIDE-Module-Name: TestTools
