--- a/testtools/src/org/netbeans/modules/testtools/generator/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/generator/Bundle.properties
@@ -13,15 +13,15 @@ MSG_Waiting=Waiting for popup menu ...
 
 ERR_NoPopup=No Popup menu found, try it again (Use CTRL-F11).
 
-CTL_Start=Start
+CTL_Start=Start Nodes'n'Actions Generator
 
 LBL_DefaultInline=Default Inline
 
-CTL_Close=Close
+#CTL_Close=Close
 
 LBL_NodesPackage=Nodes Package:\ 
 
-CTL_Stop=Stop
+CTL_Stop=Stop Nodes'n'Actions Generator
 
 LBL_SelectFilesystem=Select Destination Filesystem:
 
@@ -63,7 +63,7 @@ MNM_Start=S
 
 MNM_Stop=S
 
-MNM_Close=C
+#MNM_Close=C
 
 TTT_SelectFilesystem=Select filesystem (and package) where new nodes and actions will be stored.
 
@@ -77,4 +77,4 @@ TTT_Start=Starts generator.
 
 TTT_Stop=Stops generator.
 
-TTT_Close=Stops and closes generator.
+#TTT_Close=Stops and closes generator.
