--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -24,6 +24,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="module.license.file" value="../nbbuild/standard-nbm-license.txt"/>
   <property name="xtest.license.file" location="xtest-license.txt"/>
 
+  <taskdef name="jhindexer" classname="org.netbeans.nbbuild.JHIndexer" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="locjar" classname="org.netbeans.nbbuild.LocalizedJar" classpath="${nbext}/nbantext.jar"/>
@@ -41,7 +42,7 @@ Microsystems, Inc. All Rights Reserved.
         <pathelement location="${nbroot}/java/netbeans/modules/java.jar" />
         <pathelement location="${nbroot}/java/srcmodel/netbeans/modules/autoload/java-src-model.jar" />
         <pathelement location="${nbroot}/ant/netbeans/modules/ant.jar" />
-        <pathelement location="${nbroot}/utilities/netbeans/modules/group.jar" />
+        <pathelement location="${nbroot}/utilities/group/netbeans/modules/group.jar" />
         <pathelement location="${nbroot}/jemmy/jemmy.jar" />
         <pathelement location="${nbroot}/jellytools/jelly2-nb.jar" />
         <pathelement location="${nbroot}/jemmysupport/netbeans/modules/jemmysupport.jar" />
@@ -92,7 +93,7 @@ Microsystems, Inc. All Rights Reserved.
     </locjar>
   </target>
 
-  <target name="netbeans" depends="jars">
+  <target name="netbeans" depends="jars,javahelp">
     <genlist targetname="nbm" outputfiledir="netbeans"/>
   </target>
 
@@ -128,6 +129,8 @@ Microsystems, Inc. All Rights Reserved.
     <delete dir="netbeans/modules"/>
     <delete dir="netbeans/xtest-distribution"/>
     <delete dir="Info"/>
+    <delete dir="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2"/>
+    <delete dir="javahelp/org/netbeans/modules/usersguide"/>
   </target>
 
   <!-- Create zip archive from all nbm files. -->
@@ -149,6 +152,23 @@ Microsystems, Inc. All Rights Reserved.
     <ant dir="${nbroot}/jellytools" antfile="build.xml" target="clean"/>
     <ant dir="${nbroot}/xtest" antfile="build.xml" target="clean"/>
     <ant dir="${nbroot}/junit" antfile="build.xml" target="clean"/>
+  </target>
+
+  <target name="javahelp">
+    <mkdir dir="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2"/>
+    <jhindexer basedir="javahelp/org/netbeans/modules/testtools/docs/"
+               db="javahelp/org/netbeans/modules/testtools/docs/JavaHelpSearch2"
+               jhall="${nbroot}/nbbuild/external/jhall-1.1.2_02.jar">
+      <include name="**/*.html"/>
+      <exclude name="JavaHelpSearch2/"/>
+      <exclude name="credits.html"/>
+    </jhindexer>
+    <mkdir dir="javahelp/org/netbeans/modules/usersguide"/>
+    <copy file="${nbroot}/usersguide/javahelp/org/netbeans/modules/usersguide/ide.css" tofile="javahelp/org/netbeans/modules/usersguide/ide.css"/>
+    <mkdir dir="netbeans/modules/docs"/>
+    <locjar jarfile="netbeans/modules/docs/testtools.jar" compress="true">
+        <fileset dir="javahelp" excludesfile="${nbext}/standard-jar-excludes.txt" excludes="org/netbeans/modules/usersguide/"/>
+    </locjar>
   </target>
 
 
