#28433 Add all tasklist modules

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -109,6 +109,14 @@ local.config.xml=xml/api, \
         xml/xsl, \
 	xml/schema
 
+local.config.tasklist=tasklist/api, \
+	tasklist/core, \
+	tasklist/suggestions, \
+	tasklist/docscan, \
+	tasklist/usertasks, \
+	tasklist/editor, \
+	tasklist/bugs
+
 local.config.vcsprofiles=vcsgeneric/profiles/cvsprofiles, \
         vcsgeneric/profiles/pvcs, \
         vcsgeneric/profiles/vss
@@ -176,7 +184,7 @@ config.modules.bloated=${config.modules.stable-with-apisupport}, \
         remotefs, \
         serialversion, \
         sysprops, \
-        tasklist, \
+        ${local.config.tasklist}, \
         translatedfiles, \
         treefs, \
         web/jspdebug, \
@@ -215,7 +223,7 @@ config.modules.daily-alpha-nbms=${config.modules.stable-with-apisupport}, \
         remotefs, \
         serialversion, \
         sysprops, \
-        tasklist, \
+        ${local.config.tasklist}, \
         translatedfiles, \
         treefs, \
         web/jspdebug, \
