--- a/xtest/build.xml
+++ b/xtest/build.xml
@@ -27,8 +27,18 @@ Microsystems, Inc. All Rights Reserved.
   <target name="init">
     <ant dir="external" target="unscramble"/>
   </target>
+  
+  <target name="compile-dependend-modules">
+    <ant dir="../openide" antfile="build.xml" target="netbeans"/>
+    <ant dir="../openide/io" antfile="build.xml" target="netbeans"/>
+    <ant dir="../openide/execution" antfile="build.xml" target="netbeans"/>
+    <ant dir="../core" antfile="build.xml" target="netbeans"/>
+    <ant dir="../core/execution" antfile="build.xml" target="netbeans"/>
+    <ant dir="../core/term" antfile="build.xml" target="netbeans"/>
+    <ant dir="../core/output" antfile="build.xml" target="netbeans"/>
+  </target>
 
-  <target name="compile" depends="init,prepare-junit-extensions">
+  <target name="compile" depends="init,compile-dependend-modules,prepare-junit-extensions">
     <path id="basecp">
 	<pathelement location="../openide/openide-13javac-workaround.jar"/>
         <fileset dir="../openide/netbeans/lib">
@@ -122,6 +132,15 @@ Microsystems, Inc. All Rights Reserved.
 
   <target name="clean">
     <ant dir="../junit" antfile="build.xml" target="clean-junit-ext"/>
+
+    <ant dir="../openide" antfile="build.xml" target="clean"/>
+    <ant dir="../openide/io" antfile="build.xml" target="clean"/>
+    <ant dir="../openide/execution" antfile="build.xml" target="clean"/>
+    <ant dir="../core" antfile="build.xml" target="clean"/>
+    <ant dir="../core/execution" antfile="build.xml" target="clean"/>
+    <ant dir="../core/term" antfile="build.xml" target="clean"/>
+    <ant dir="../core/output" antfile="build.xml" target="clean"/>
+
     <delete>
       <fileset dir="src">
         <include name="**/*.class"/>
