--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -45,7 +45,7 @@ ToDo:
         <include name="xml/external/resolver*.jar"/>
       </fileset>
     </path>
-    <javac srcdir="antsrc" destdir="antsrc" deprecation="true" debug="${build.compiler.debug}">
+    <javac srcdir="antsrc" destdir="antsrc" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
       <classpath refid="bootstrap-cp"/>
     </javac>
     <jar jarfile="nbantext.jar" basedir="antsrc">
