Bugfix 28905. Changing the mnemonic as suggested.

--- a/web.core/src/org/netbeans/modules/web/core/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/Bundle.properties
@@ -38,7 +38,7 @@ CTL_defaultBrowser=<default>
 
 # EditQueryStringAction
 LBL_EditQueryString=Set Request Parameters...
-CTL_QueryStringLabel=Query String:
+CTL_QueryStringLabel=&Query String:
 CTL_QueryStringTitle=Set HTTP Request Parameters (Query String)
 
 #ServletSettingsBeanInfo
