--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -64,6 +64,8 @@ XTestHomeDescription=XTest Home Directory
 
 XTestBuildScriptName=XTest Build Script
 
+XTestConfigName=XTest Configuration File
+
 CleanResultsActionName=Clean Results
 
 ExtensionsName=Extensions and MIME Types
