(#27884) NamingAPI to appear at web. Also refined javadoc target like it is in openide/execution.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -245,6 +245,7 @@ config.fixedmodules.javadoc=openide, \
         openide/io, \
         ant, \
         core/javahelp, \
+        core/naming, \
         core/settings, \
         diff, \
         java/api, \
