added config customizer panel

--- a/testtools/src/org/netbeans/modules/testtools/Bundle.properties
+++ b/testtools/src/org/netbeans/modules/testtools/Bundle.properties
@@ -89,3 +89,11 @@ ExecutionAttributesDescription=Test Bag Attributes
 ShowResultsName=Show Results
 
 ShowResultsDescription=Start Browser with Results
+
+TTT_ComponentsTree=Tree representing grabbed components.
+
+TTT_Properties=Properties of selected component.
+
+LBL_Properties=Property Sheet
+
+LBL_ComponentTree=Component Tree
