--- a/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
+++ b/httpserver/src/org/netbeans/modules/httpserver/Bundle.properties
@@ -42,7 +42,10 @@ LAB_REPOSITORY_ROOT=Filesystems
 CTL_PARENT_DIR=Parent directory
 
 # HttpServerModule.class
+MSG_HTTP_SERVER_incompatbleClasses=The HTTP server could not start. There might be another version of Servlet API on the classpath \
+  that clashes with version required by this server.
 MSG_HTTP_SERVER_START_FAIL=The HTTP server could not start. Check that the port is not in use.
+MSG_HTTP_SERVER_START_FAIL_unknown=The HTTP server could not start. Check ide.log for more information.
 # 0 .. port number for the server
 CTL_ServerStarted=Internal HTTP server running on port {0,number,####}
 CTL_ServerStopped=Internal HTTP server stopped
