--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/Bundle.properties
@@ -31,6 +31,8 @@ PROP_executor=Default Executor
 HINT_executor=Specifies the default executor for Ant scripts.
 PROP_antVersion=Ant Version
 HINT_antVersion=Version of Ant used internally.
+PROP_inputHandler=Input Handler
+HINT_inputHandler=Sets your input handler. If not specified the NetBeans one is used.
 LBL_verbosity_err=Errors only
 LBL_verbosity_warn=Warnings
 LBL_verbosity_info=Normal
