--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/run/Bundle.properties
@@ -134,3 +134,14 @@ EXC_not_an_ant_script=\
         You cannot use {2} on {0} because it is an object of type {1}. \
         Ant executors may only be used on Ant build scripts. \
         Please see the online help for further explanation.
+
+#TargetExecutor
+# {0} - name of user defined input handler
+MSG_input_handler_exception=Cannot create instance of input handler {0}. \
+                            Check configuration of Input Handler property in your AntSettings. \
+                            The build process will be aborted.
+
+#NbInputHandler
+TITLE_input_handler=Input Handler
+MSG_input_aborted=Input request was aborted by user.
+ACSD_input_handler=Enter input for the Ant script
