1. Include text module in platform. 2. Include Ant documentation in apisupport config.

--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -51,7 +51,8 @@ config.fixedmodules.platform=core, \
         core/windows
 config.modules.platform=autoupdate, \
         core/settings, \
-        core/javahelp
+        core/javahelp, \
+        text
 
 config.fixedmodules.superslim=core, \
         openide, \
@@ -154,6 +155,7 @@ config.modules.stable=${config.modules.slim}, \
 
 config.fixedmodules.stable-with-apisupport=${config.fixedmodules.stable}
 config.modules.stable-with-apisupport=${config.modules.stable}, \
+        ant/docs, \
         apisupport, \
         apisupport/ant, \
         apisupport/apidocs
