Issue #29251 fixed Alt-F mnemonic unusable in New wizard, changed to alt- O

--- a/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/editors/Bundle.properties
@@ -216,7 +216,7 @@ LAB_directory=Directory:
 LAB_TargetLocationPanelName=Target Location
 CTL_Create=Create
 LAB_TargetLocationDescription_mnemonic=T
-LAB_package_mnemonic=F
+LAB_package_mnemonic=O
 LAB_directory_mnemonic=D
 CTL_Create_mnemonic=C
 
